--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       MYSQL_DATABASE: docker_development
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
   app:
-    image: ruby:2.7.3
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
@@ -23,5 +22,19 @@ services:
       - db
     volumes:
       - .:/myapp
+  redis:
+    image: redis:5.0.3
+    volumes:
+      - redis-n_1_query:/data
+  sidekiq:
+    build:
+      context: .
+    command: bundle exec sidekiq
+    depends_on:
+      - app
+      - redis
+    volumes:
+      - .:/myapp
 volumes:
   mysql-n_1_query:
+  redis-n_1_query:
